# ros2_noob

./: .gitignore  CMakeLists.txt  README.md  motor_control.cpp  pico_micro_ros_example.c  pico_micro_ros_example.cpp  pico_motor_control.md  platform.md  platformio.ini  platformio.vcxproj  platformio.vcxproj.filters  ros2_note.md  ros2_note_cn.md
chapt2/basic/: CMakeLists.txt  Makefile  a  first_node.cpp
chapt2/chapt2_ws/chapt2_ws/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/chapt2_ws/log/: latest_build
chapt2/chapt2_ws/chapt2_ws/src/example_cpp/: CMakeLists.txt
chapt2/chapt2_ws/chapt2_ws/src/example_cpp/src/: node_01.cpp
chapt2/colcon_test_ws/install/: local_setup.sh  setup.sh
chapt2/colcon_test_ws/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
chapt2/colcon_test_ws/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: package.sh
chapt2/colcon_test_ws/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
chapt2/colcon_test_ws/install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: package.sh
chapt2/colcon_test_ws/install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
chapt2/colcon_test_ws/install/examples_rclcpp_minimal_action_client/share/examples_rclcpp_minimal_action_client/: local_setup.sh  package.sh
chapt2/colcon_test_ws/install/examples_rclcpp_minimal_action_server/lib/examples_rclcpp_minimal_action_server/: action_server_member_functions  action_server_not_composable
chapt2/colcon_test_ws/install/examples_rclcpp_minimal_action_server/share/examples_rclcpp_minimal_action_server/: package.sh
chapt2/colcon_test_ws/log/: latest_build  latest_test
chapt3/chapt3_ws/install/: local_setup.sh  setup.sh
chapt3/chapt3_ws/log/: latest_build
chapt3/chapt3_ws/src/example_interfaces_rclcpp/: CMakeLists.txt  package.xml
chapt3/chapt3_ws/src/example_interfaces_rclcpp/src/: example_interfaces_control_01.cpp  example_interfaces_robot_01.cpp
chapt3/chapt3_ws/src/example_service_rclcpp/: CMakeLists.txt
chapt3/chapt3_ws/src/example_service_rclcpp/src/: service_client_01.cpp  service_server_01.cpp
chapt3/chapt3_ws/src/example_topic_rclcpp/: CMakeLists.txt
chapt3/chapt3_ws/src/example_topic_rclcpp/src/: topic_subscribe_01.cpp
chapt3/cpp_pubsub/: CMakeLists.txt  README.md  package.xml
chapt3/cpp_pubsub/install/: local_setup.sh  setup.sh
chapt3/cpp_pubsub/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
chapt3/cpp_pubsub/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
chapt3/cpp_pubsub/log/: latest_build
chapt3/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
chapt3/cpp_srvcli/: README.md
chapt3/cpp_srvcli/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt3/cpp_srvcli/install/cpp_srvcli/lib/cpp_srvcli/: client  server
chapt3/cpp_srvcli/log/: latest_build
chapt4/chapt4_ws/install/: local_setup.sh  setup.sh
chapt4/chapt4_ws/log/: latest_build
chapt4/chapt4_ws/src/example_parameters_rclcpp/src/: parameters_basic.cpp
cpp_pubsub/: CMakeLists.txt.bak
cpp_pubsub/install/: local_setup.sh  setup.sh
cpp_pubsub/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
cpp_pubsub/install/cpp_pubsub/share/cpp_pubsub/: package.sh
cpp_pubsub/log/: latest_build
pio/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.cpp
pwm/hello_pwm/: CMakeLists.txt  hello_pwm.c  hello_pwm.cpp
pwm/led_fade/: pwm_led_fade.c
pwm/measure_duty_cycle/: measure_duty_cycle.c
(+82 files in other folders)
